--- a/src/google/res/values-sr/strings.xml
+++ b/src/google/res/values-sr/strings.xml
@@ -28,9 +28,7 @@
     <string name="filter_city_age_parameters">Године и град</string>
     <string name="filter_select_city">Изабери град</string>
     <string name="edit_block_photo">Фотографије</string>
-    <string name="dashbrd_popup_rating">Свиђа Вам се наша апликација? Подигните наш рејтинг! Што је
-        већи рејтинг, више људи ћеш срести у Topface!
-    </string>
+    <string name="dashbrd_popup_rating">Свиђа Вам се наша апликација? Подигните наш рејтинг! Што је већи рејтинг, више људи ћеш срести у Topface!</string>
     <string name="dashbrd_popup_title">Оцени ме</string>
     <string name="dashbrd_popup_cancel">Не питај више</string>
     <string name="dashbrd_popup_rate">Оцени</string>
@@ -123,8 +121,7 @@
     <string name="pincode_change_label">Промена PIN кода</string>
     <string name="pincode_delete_label">Уклањам PIN код</string>
     <string name="pincode_turning_on">Укључи закључавање</string>
-    <string name="pincode_dont_match">PIN кодови се не подударају. Молимо, покушајте поново.
-    </string>
+    <string name="pincode_dont_match">PIN кодови се не подударају. Молимо, покушајте поново.</string>
     <string name="pincode_wrong">Неисправан PIN код</string>
     <string name="pincode_input">Унесите PIN код</string>
     <string name="pincode_input_previous">Унесите стари PIN код</string>
@@ -227,12 +224,9 @@
         <item quantity="one">Да бисте послали дивљење, сакупите још %d новчића</item>
     </plurals>
     <plurals name="buying_unlock_likes_you_need_coins">
-        <item quantity="few">Како бисте могли да видите коме се свиђате, набавите још %d новчића
-        </item>
-        <item quantity="other">Како бисте могли да видите коме се свиђате, набавите још %d новчића
-        </item>
-        <item quantity="one">Како бисте могли да видите коме се свиђате, набавите још %d новчић
-        </item>
+        <item quantity="few">Како бисте могли да видите коме се свиђате, набавите још %d новчића</item>
+        <item quantity="other">Како бисте могли да видите коме се свиђате, набавите још %d новчића</item>
+        <item quantity="one">Како бисте могли да видите коме се свиђате, набавите још %d новчић</item>
     </plurals>
     <plurals name="buying_leaders_you_need_coins">
         <item quantity="few">Како би Вас сви видели, набавите још %d новчића</item>
@@ -378,8 +372,7 @@
     <string name="black_list_delete">Уклонити из црне листе</string>
     <string name="vip_buy_vip">Куповина VIP-статуса</string>
     <string name="vip_state_off">Ваш VIP-статус није активиран.</string>
-    <string name="vip_info_guest">Сазнајте ко је заинтересован за Вас - погледајте своје госте!
-    </string>
+    <string name="vip_info_guest">Сазнајте ко је заинтересован за Вас - погледајте своје госте!</string>
     <string name="vip_info_invisible">Останите непримећени док посећујете туђе странице користећи
         режим \"Невидљив\"
     </string>
@@ -392,9 +385,7 @@
     </string>
     <string name="buying_vip_status">Купи VIP-статус</string>
     <string name="edit_my_city">Мој град</string>
-    <string name="settings_feedback_email">Оставите адресу своје е-поште да бисте добили одговор од
-        нас.
-    </string>
+    <string name="settings_feedback_email">Оставите адресу своје е-поште да бисте добили одговор од нас.</string>
     <string name="settings_invalid_email">Неважећа адреса е-поште</string>
     <string name="chat_write_message">Написати поруку</string>
     <string name="dating_message">Порука…</string>
@@ -422,9 +413,7 @@
     </string>
     <string name="default_price_format">Укупно: %2f USD</string>
     <string name="default_price_format_extended">Укупно: %1$.2f %2$s</string>
-    <string name="leaders_pick_condition">Не можете одабрати фотографију чији је рејтинг нижи од
-        %d%%:
-    </string>
+    <string name="leaders_pick_condition">Не можете одабрати фотографију чији је рејтинг нижи од %d%%:</string>
     <string name="general_gift">Поклон</string>
     <string name="user_actions_chat">Ћаскање</string>
     <string name="profile_edit_age_ranges">Године морају бити у граници између 16 и 99. Молимо да
@@ -536,8 +525,7 @@
     </string>
     <string name="vip_stop_ads">Само ћаскање, ништа друго. VIP корисници неће видети огласе!
     </string>
-    <string name="friend_email_hint">Унесите адресу е-поште или број телефона Вашег пријатеља
-    </string>
+    <string name="friend_email_hint">Унесите адресу е-поште или број телефона Вашег пријатеља</string>
     <string name="general_add">Додати</string>
     <string name="general_invite_friends">Позови пријатеље</string>
     <string name="general_rest_contacts">Остало Вам је %d контаката</string>
@@ -558,8 +546,7 @@
     </plurals>
     <plurals name="invite_friends_plurals">
         <item quantity="few">Позовите %1$d пријатеља да бисте добили VIP-статус на %2$d дана</item>
-        <item quantity="other">Позовите %1$d пријатеља да бисте добили VIP-статус на %2$d дана
-        </item>
+        <item quantity="other">Позовите %1$d пријатеља да бисте добили VIP-статус на %2$d дана</item>
         <item quantity="one">Позовите %1$d пријатеља да бисте добили VIP-статус на %2$d дан</item>
     </plurals>
     <plurals name="get_vip_for_invites_plurals">
@@ -627,8 +614,7 @@
         упознате људе на Topface!
     </string>
     <string name="send_confirm_link">Пошаљи линк за потврду</string>
-    <string name="complain_type_swearing_msg">Увредљиво понашање, неправилно изражавање, претње
-    </string>
+    <string name="complain_type_swearing_msg">Увредљиво понашање, неправилно изражавање, претње</string>
     <string name="general_exit">Изаћи</string>
     <string name="likes_can_help_you">Свиђања Вам помажу да упознате људе</string>
     <string name="general_get_dating">Упознати</string>
@@ -636,9 +622,7 @@
     <string name="settings_select_preload_photo_type">Изаберите када ће предучитавање фотографија
         бити укључено
     </string>
-    <string name="restart_to_change_locale">Да бисте променили језик, апликација мора бити поново
-        стартована
-    </string>
+    <string name="restart_to_change_locale">Да бисте променили језик, апликација мора бити поново стартована</string>
     <string name="locale_changing">Промени језик</string>
     <plurals name="you_were_liked">
         <item quantity="few">Свидели сте се %d особама</item>
@@ -690,9 +674,7 @@
     <string name="skip_all">Прескочи све</string>
     <string name="settings_feedback_transaction_number">Број поруџбине</string>
     <string name="settings_feedback_transaction_link">Где могу наћи број поруџбине?</string>
-    <string name="general_logout_error">Дошло је до грешке приликом одјављивања. Молимо, покушајте
-        поново.
-    </string>
+    <string name="general_logout_error">Дошло је до грешке приликом одјављивања. Молимо, покушајте поново.</string>
     <string name="auth_btn_ok">Одноклассники</string>
     <string name="auth_btn_tf">Topface налог</string>
     <string name="birthday">Датум рођења</string>
