--- a/src/google/res/values-pt/strings.xml
+++ b/src/google/res/values-pt/strings.xml
@@ -30,9 +30,7 @@
     <string name="filter_city_age_parameters">Idade e cidade</string>
     <string name="filter_select_city">Selecionar cidade</string>
     <string name="edit_block_photo">Fotos</string>
-    <string name="dashbrd_popup_rating">Gostaste da nossa aplicação? Aumenta a nossa classificação!
-        Quanto maior a classificação, mais pessoas irás conhecer no Topface!
-    </string>
+    <string name="dashbrd_popup_rating">Gostaste da nossa aplicação? Aumenta a nossa classificação! Quanto maior a classificação, mais pessoas irás conhecer no Topface!</string>
     <string name="dashbrd_popup_title">Avalia-me</string>
     <string name="dashbrd_popup_cancel">Não perguntar novamente</string>
     <string name="dashbrd_popup_rate">Classificar</string>
@@ -72,9 +70,7 @@
     <string name="profile_mygifts_empty">Ainda ninguém lhe enviou presentes.</string>
     <string name="dating_people_unnoticed">Não te apercebeste de 10 pessoas!</string>
     <string name="dating_continue">Continuar nos Encontros</string>
-    <string name="dating_better_look">Olha com mais atenção!\nPodes estar a perder a tua
-        oportunidade!
-    </string>
+    <string name="dating_better_look">Olha com mais atenção!\nPodes estar a perder a tua oportunidade!</string>
     <string name="edit_my_photos">As minhas fotos</string>
     <string name="general_search_empty_title">Lamentamos, ninguém foi encontrado :(</string>
     <string name="general_search_empty_text">Podes voltar a efetuar a pesquisa ou alterar as
@@ -83,9 +79,7 @@
     <string name="map_title">Mapa</string>
     <string name="general_buying">Compra de moedas e gostos</string>
     <string name="popup_version_title">Está disponível uma nova versão da aplicação!</string>
-    <string name="popup_version_message">Chegou o momento de atualizares a versão da tua
-        aplicação!
-    </string>
+    <string name="popup_version_message">Chegou o momento de atualizares a versão da tua aplicação!</string>
     <string name="leaders_select_photo_info">Seleciona a tua foto mais impressionante! Não podes
         selecionar uma foto com uma baixa classificação.
     </string>
@@ -133,9 +127,7 @@
     <string name="pincode_input_previous">Introduz o PIN antigo</string>
     <string name="pincode_repeat">Repita o PIN</string>
     <string name="pincode_forget">Esqueceste-te do teu PIN?</string>
-    <string name="pincode_auth_input">Precisas de introduzir os teus dados de início de sessão e a
-        palavra-passe.
-    </string>
+    <string name="pincode_auth_input">Precisas de introduzir os teus dados de início de sessão e a palavra-passe.</string>
     <string name="pincode_will_be_reset">Se a autorização for bem sucedida, todas as definições da
         aplicação serão repostas.
     </string>
@@ -321,9 +313,7 @@
         <item quantity="one">Coloca-me aqui por %d moeda</item>
     </plurals>
     <string name="photo_add_or">A tua foto foi adicionada</string>
-    <string name="photo_add_error">Não foi possível carregar a tua foto. Pretendes tentar
-        novamente?
-    </string>
+    <string name="photo_add_error">Não foi possível carregar a tua foto. Pretendes tentar novamente?</string>
     <plurals name="photo">
         <item quantity="zero">Sem fotos</item>
         <item quantity="other">%d fotos</item>
@@ -372,8 +362,7 @@
     <string name="black_list_delete">Eliminar da Lista Negra</string>
     <string name="vip_buy_vip">Comprar estatuto VIP</string>
     <string name="vip_state_off">O teu estatuto VIP não está ativado.</string>
-    <string name="vip_info_guest">Descobre quem está interessado em ti - vê os teus visitantes!
-    </string>
+    <string name="vip_info_guest">Descobre quem está interessado em ti - vê os teus visitantes!</string>
     <string name="vip_info_invisible">Passa despercebido ao visitar páginas de outros usando o Modo
         de Invisibilidade.
     </string>
@@ -388,9 +377,7 @@
     </string>
     <string name="buying_vip_status">Obter estatuto VIP</string>
     <string name="edit_my_city">A minha cidade</string>
-    <string name="settings_feedback_email">Introduz o teu e-mail para receberes uma resposta
-        nossa.
-    </string>
+    <string name="settings_feedback_email">Introduz o teu e-mail para receberes uma resposta nossa.</string>
     <string name="settings_invalid_email">E-mail inválido</string>
     <string name="chat_write_message">Escreve uma mensagem</string>
     <string name="dating_message">Mensagem…</string>
@@ -418,9 +405,7 @@
     </string>
     <string name="default_price_format">Total: %.2f USD</string>
     <string name="default_price_format_extended">Total: %1$.2f %2$s</string>
-    <string name="leaders_pick_condition">Não podes selecionar uma foto com uma classificação
-        inferior a %d%%:
-    </string>
+    <string name="leaders_pick_condition">Não podes selecionar uma foto com uma classificação inferior a %d%%:</string>
     <string name="general_gift">Presente</string>
     <string name="user_actions_chat">Chat</string>
     <string name="profile_edit_age_ranges">A idade deve ser entre os 16 e os 99 anos. Por favor
@@ -452,8 +437,7 @@
     <string name="incorrect_login">Início de sessão inválido</string>
     <string name="incorrect_password">Palavra-passe inválida</string>
     <string name="empty_fields">Nem todos os campos estão preenchidos.</string>
-    <string name="email_already_registered">Lamentamos mas este e-mail já está a ser utilizado.
-    </string>
+    <string name="email_already_registered">Lamentamos mas este e-mail já está a ser utilizado.</string>
     <string name="enter_email_from_registration">Introduz o e-mail que usaste quando te registaste
     </string>
     <string name="default_photo_upload">Adicionar fotos</string>
@@ -516,8 +500,7 @@
     <string name="general_choose_city">Seleciona a tua cidade</string>
     <string name="buy_mobile_payments">Outros métodos de pagamento</string>
     <string name="general_save_and_exit">Guardar e terminar sessão</string>
-    <string name="general_set_password">Define a tua palavra-passe antes de terminar sessão.
-    </string>
+    <string name="general_set_password">Define a tua palavra-passe antes de terminar sessão.</string>
     <string name="user_is_deleted">O utilizador foi eliminado.</string>
     <string name="general_bookmarks">Favoritos</string>
     <string name="general_fans">Fãs</string>
@@ -625,9 +608,7 @@
         conhecer pessoas no Topface!
     </string>
     <string name="send_confirm_link">Enviar um link para confirmação</string>
-    <string name="complain_type_swearing_msg">Comportamento ofensivo, linguagem inadequada,
-        ameaças
-    </string>
+    <string name="complain_type_swearing_msg">Comportamento ofensivo, linguagem inadequada, ameaças</string>
     <string name="general_exit">Sair</string>
     <string name="likes_can_help_you">Os gostos ajudam-te a conhecer pessoas</string>
     <string name="general_get_dating">Conhecer</string>
@@ -635,9 +616,7 @@
     <string name="settings_select_preload_photo_type">Escolhe quando é que o pré-carregamento de
         fotos é ativado
     </string>
-    <string name="restart_to_change_locale">A aplicação tem de ser reiniciada para alterar o
-        idioma.
-    </string>
+    <string name="restart_to_change_locale">A aplicação tem de ser reiniciada para alterar o idioma.</string>
     <string name="locale_changing">Alterar o idioma</string>
     <plurals name="you_were_liked">
         <item quantity="other">%d pessoas gostaram de ti</item>
@@ -686,15 +665,12 @@
     <string name="skip_all">Ignorar tudo</string>
     <string name="settings_feedback_transaction_number">Número de pedido</string>
     <string name="settings_feedback_transaction_link">Onde encontro o meu número de pedido?</string>
-    <string name="general_logout_error">Infelizmente não é possível terminar sessão. Por favor tenta
-        novamente.
-    </string>
+    <string name="general_logout_error">Infelizmente não é possível terminar sessão. Por favor tenta novamente.</string>
     <string name="auth_btn_ok">Entrar com Odnoklassniki</string>
     <string name="auth_btn_tf">Conta Topface</string>
     <string name="birthday">Aniversário</string>
     <string name="other_auth">Iniciar sessão com outros serviços</string>
-    <string name="settings_feedback_transaction_number_hint">Introduz o teu número do pedido
-    </string>
+    <string name="settings_feedback_transaction_number_hint">Introduz o teu número do pedido</string>
     <string name="delete_visitors">Eliminar visitantes</string>
     <string name="delete_admirations">Eliminar admirações</string>
     <string name="general_admirations">Admirações</string>
@@ -825,15 +801,12 @@
     <string name="google_unavailable_services_title">Infelizmente, as Notificações não estão
         disponíveis no teu dispositivo.
     </string>
-    <string name="receive_message_notification">Receber notificação acerca de\numa nova mensagem
-    </string>
+    <string name="receive_message_notification">Receber notificação acerca de\numa nova mensagem</string>
     <string name="receive_mutual_notification">Receber notificação acerca de\num gosto mútuo
     </string>
-    <string name="receive_sympathy_notification">Receber notificação acerca de\num novo gosto
-    </string>
+    <string name="receive_sympathy_notification">Receber notificação acerca de\num novo gosto</string>
     <string name="receive_rate_notification">eliminar</string>
-    <string name="receive_guest_notification">Receber notificação acerca de\num novo convidado
-    </string>
+    <string name="receive_guest_notification">Receber notificação acerca de\num novo convidado</string>
     <string name="on_phone">Para telemóvel</string>
     <string name="on_mail">Para e-mail</string>
     <string name="add_leader_hint">A sua saudação…</string>
@@ -857,9 +830,7 @@
     <string name="trial_vip_button_text">Ser VIP</string>
     <string name="settings_check_vip_title">Verificar se o estatuto VIP está ativo</string>
     <string name="settings_check_vip_cell">Verificar estatuto VIP</string>
-    <string name="settings_check_vip_alert">O teu pedido para verificar o teu estatuto VIP foi
-        enviado.
-    </string>
+    <string name="settings_check_vip_alert">O teu pedido para verificar o teu estatuto VIP foi enviado.</string>
     <string name="novice_sympathy">Envia gostos apenas às pessoas\npor quem te sentes
         atraído(a).\nPodes encontrar alguém especial!
     </string>
