--- a/src/google/res/values/strings.xml
+++ b/src/google/res/values/strings.xml
@@ -29,9 +29,7 @@
     <string name="filter_city_age_parameters">Age and city</string>
     <string name="filter_select_city">Select city</string>
     <string name="edit_block_photo">Photos</string>
-    <string name="dashbrd_popup_rating">Like our app? Raise our rating! The higher the rating, the
-        more people you\'ll meet on Topface!
-    </string>
+    <string name="dashbrd_popup_rating">Like our app? Raise our rating! The higher the rating, the more people you\'ll meet on Topface!</string>
     <string name="dashbrd_popup_title">Rate me</string>
     <string name="dashbrd_popup_cancel">Don\'t ask me again</string>
     <string name="dashbrd_popup_rate">Rate</string>
@@ -403,8 +401,7 @@
     </string>
     <string name="default_price_format">Total: %.2f USD</string>
     <string name="default_price_format_extended">Total: %1$.2f %2$s</string>
-    <string name="leaders_pick_condition">You cannot select a photo with a rating lower than %d%%:
-    </string>
+    <string name="leaders_pick_condition">You cannot select a photo with a rating lower than %d%%:</string>
     <string name="general_gift">Gift</string>
     <string name="user_actions_chat">Chat</string>
     <string name="profile_edit_age_ranges">Age has to be between 16 and 99 years. Please enter a
@@ -581,8 +578,7 @@
         offensive language, links to social networks
     </string>
     <string name="complain_type_fake_data">Name, sex, age, or photo don\'t match</string>
-    <string name="complain_description">Tell us the details regarding the cause for complaint.
-    </string>
+    <string name="complain_description">Tell us the details regarding the cause for complaint.</string>
     <string name="general_complain_sended">Your complaint has been submitted, thank you for your
         help!
     </string>
@@ -601,8 +597,7 @@
         people on Topface!
     </string>
     <string name="send_confirm_link">Send a link for confirmation</string>
-    <string name="complain_type_swearing_msg">Offensive behavior, improper language, threats
-    </string>
+    <string name="complain_type_swearing_msg">Offensive behavior, improper language, threats</string>
     <string name="general_exit">Exit</string>
     <string name="likes_can_help_you">Likes help you meet people</string>
     <string name="general_get_dating">Meet</string>
@@ -824,4 +819,5 @@
     <string name="novice_sympathies_bonus">You are getting %1$d Likes as a gift! It means that %2$d
         people will give you a Like and genuinely mean it!
     </string>
+    <string name="go_dating_message">Start dating and you will who view you page here</string>
 </resources>
