--- a/src/blueStacks/res/values/strings.xml
+++ b/src/blueStacks/res/values/strings.xml
@@ -668,4 +668,5 @@
     <string name="settings_check_vip_alert">Your request to check VIP-status has been sent.</string>
     <string name="novice_sympathy">Send Likes only to those\nwho really attract you.\nYou just might find someone special!</string>
     <string name="novice_sympathies_bonus">You are getting %1$d Likes as a gift! It means that %2$d people will give you a Like and genuinely mean it!</string>
+    <string name="go_dating_message">Start dating and you will who view you page here</string>
 </resources>
