--- a/src/derived/res/values-ru/strings.xml
+++ b/src/derived/res/values-ru/strings.xml
@@ -1002,4 +1002,5 @@
     <string name="novice_sympathies_bonus">Вы получаете %1$d симпатии в\nподарок! Это означает, что
         вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию
     </string>
+    <string name="go_dating_message">Начните знакомиться, и здесь вы увидите пользователей, посетивших ваш профиль</string>
 </resources>
